Changes for REDIPS.drag library

4.5.1
- added empty_cell() public method
- added shift_cells() private method
- added delete_shifted public property
- added shift_animation public property

4.5.0
- added functionality for cloning and deleting table rows
- added the following event handlers:
    myhandler_row_deleted()
    myhandler_row_undeleted()
    myhandler_row_cloned()
    myhandler_row_notcloned
- added "clone_shiftKey_row" public property
- added example20 "Clone and delete table rows"
- changed redips.dragrow_id to the redips.div (now it is reference to DIV element with class name "drag row")
- replacing window.onload in all examples with advanced event registration model
- added public method row_empty() - marks selected row as empty (tbl_id, row_idx, [color])

4.4.3
- if myhandler_dropped_before() returns false then element drop will be canceled

4.4.2
- modified enable_drag() - optional third parameter is changed from 'container' to 'subtree'
- fixed moving last row from table

4.4.1
- added example19 "Groups and table rows" - thanks to Tomas Lampo
- added public method enable_table()
- added public method find_parent() - find parent element from start position
- added public method clone_div() - clones DIV element
- deleted public method add_events() - not needed any more
- cloned_id property is no longer exposed as public
- code optimization
- code cleaning

4.4.0
- added support for dynamical creation of table layout (inner table inside DIV element can be moved and accept other DIV elements)
- added myhandler_cloned_dropped() event handler
- upgrading example11

4.3.6
- added support for rows with style display='none'

4.3.5
- added option to exclude tables with className "nolayout" (if want to put table in DIV element and drag as any other content)

4.3.4
- fixed bug: drop_option should not have impact in case of dragging table rows

4.3.3