@@ -1,0 +1,93 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+	<head>
+		<meta name="author" content="Darko Bunic"/>
+		<meta name="description" content="Drag and drop table content with JavaScript"/>
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="../header.js"></script>
+		<script type="text/javascript" src="../redips-drag.js"></script>
+		<script type="text/javascript" src="script.js"></script>
+		<title>Example 21: Shift table content</title>
+	</head>
+	<body>
+		<center>
+			<!-- tables inside this DIV could contain drag-able content  -->
+			<div id="drag">
+				<table>
+					<colgroup>
+						<col width="100"/>
+						<col width="100"/>
+						<col width="100"/>
+						<col width="100"/>
+						<col width="100"/>
+						<col width="100"/>
+						<col width="100"/>
+						<col width="100"/>
+					</colgroup>
+					<tbody>
+						<tr>
+							<td><div class="drag">A</div></td>
+							<td><div class="drag">B</div></td>
+							<td><div class="drag">C</div></td>
+							<td><div class="drag">D</div></td>
+							<td><div class="drag">E</div></td>
+							<td><div class="drag">F</div></td>
+							<td><div class="drag">G</div></td>
+							<td><div class="drag">H</div></td>
+						</tr>
+						<tr>
+							<td><div class="drag">I</div></td>
+							<td><div class="drag">J</div></td>
+							<td><div class="drag">K</div></td>
+							<td><div class="drag">L</div></td>
+							<td><div class="drag">M</div></td>
+							<td><div class="drag">N</div></td>
+							<td><div class="drag">O</div></td>
+							<td><div class="drag">P</div></td>
+						</tr>
+						<tr>
+							<td><div class="drag">Q</div></td>
+							<td><div class="drag">R</div></td>
+							<td><div class="drag">S</div></td>
+							<td><div class="drag">T</div></td>
+							<td><div class="drag">U</div></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</center>
+	</body>
+</html>
