@@ -1,0 +1,30 @@
+/*jslint white: true, browser: true, undef: true, nomen: true, eqeqeq: true, plusplus: false, bitwise: true, regexp: true, strict: true, newcap: true, immed: true, maxerr: 14 */
+/*global window: false, REDIPS: true */
+
+/* enable strict mode */
+"use strict";
+
+var redips_init;
+
+// redips initialization
+redips_init = function () {
+	// reference to the REDIPS.drag library
+	var	rd = REDIPS.drag;
+	// initialization
+	rd.init();
+	// set drop option to "shift"
+	rd.drop_option = 'shift';
+	// element clicked (set hover color for "cell" mode)
+	rd.myhandler_clicked = function () {
+		rd.hover_color = '#FFCFAE';
+	};
+};
+
+
+// add onload event listener
+if (window.addEventListener) {
+	window.addEventListener('load', redips_init, false);
+}
+else if (window.attachEvent) {
+	window.attachEvent('onload', redips_init);
+}
