@@ -46,7 +46,7 @@
 				<tr>
 					<td><div id="link1" class="drag t1">Example 01<br/><a href="example01/">Three tables</a></div></td>
 					<td><div id="link1" class="drag t1">Example 11<br/><a href="example11/">Drag handle on titlebar</a></div></td>
-					<td></td>
+					<td><div id="link1" class="drag t1">Example 21<br/><a href="example21/">Shift table content</a></div></td>
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 02<br/><a href="example02/">Green and orange elements</a></div></td>
